# fastipc

./: .clang-format  .clang-tidy  .cmake-format  .gitconfig  CMakeLists.txt  README.md
.github/workflows/: build.yml  clang-format-check.yml  format.yml
CMake/Modules/: Common.cmake
include/: fastipc.hxx  tower.hxx
include/io/: cursor.hxx  fd.hxx
src/: channel.cxx  channel.hxx  fastipc.cxx  local_proto.hxx  main.cxx  tower.cxx  tower.hxx  visitor.hxx
src/co/: coroutine.hxx  coroutine3.hxx  received.hxx  scheduler.hxx  task.hxx
src/io/: addr.cxx  addr.hxx  context.hxx  cursor.hxx  endian.hxx  fd.hxx  io_env.hxx  polled_fd.hxx  polled_io.hxx  reactor.cxx  reactor.hxx  result.hxx
src/xnt/: xnt.hxx
src/xnt/ip/: xnt_ip.hxx  xnt_ip_ctrl.cxx  xnt_ip_ctrl_proto.hxx  xnt_ip_data.cxx
test/: CMakeLists.txt  intraprocess.cxx  reader.cxx  writer.cxx
